# ROS-packages

./: .gitignore  README.md  frames.gv
adaptive_local_planner/: CMakeLists.txt  README.md  adaptive_local_planner_plugin.xml  package.xml
adaptive_local_planner/launch/: autonomous_single_robot_exploration_karto.launch  carto_simple_exploration_on_bag.launch  gmapping_simple_exploration_on_bag.launch  simple_exploration.launch  simple_exploration_gmapping.launch  simple_exploration_karto.launch  turtlebot_in_stage.launch  turtlebot_urg_lidar_2d.lua
adaptive_local_planner/rviz/: robot_navigation.rviz
adaptive_local_planner/sim/: map.pgm  map.world  map.yaml  maze.world  maze.yaml  turtlebot.inc
adaptive_local_planner/src/: pf_local_planner.cpp  pf_local_planner.h  simple_ccl.cpp
distributed_slam_karto/: CMakeLists.txt  package.xml  prebuild.sh
distributed_slam_karto/include/open_karto/: Mapper.h
distributed_slam_karto/launch/: config.lua  dslam_on_bag.launch  exploration.launch  sim_landmark.launch  single_robot_config.launch  testcnf.launch
distributed_slam_karto/launch/includes/: global_costmap_params.yaml  local_costmap_params.yaml  move_base.launch.xml  pf_local_planner.yaml  turtlebot.urdf  viewer.rviz
distributed_slam_karto/msg/: Edge.msg  Graph.msg  LaserDevice.msg  Link.msg  Vertex.msg
distributed_slam_karto/src/: dslam.cpp  dslam.h  dslam_karto.cpp  dslam_karto_2_laser.cpp  graph_sync.cpp  slam_karto_g2o.cpp
distributed_slam_karto/src/open_karto/: DKarto.h  G2OSolver.cpp  Mapper.cpp
distributed_slam_karto/src/utils/: ConfValue.cpp  luaconf.cpp  luaconf.h
distributed_slam_karto/src/utils/lua-5.3.4/: lua  luac
distributed_slam_karto/srv/: SyncGraph.srv
dslam/: CMakeLists.txt  package.xml
dslam/launch/: config.lua  dslam_on_bag.launch  empty_world.launch  karto_on_bag.launch  keyboard_teleop.launch  rvizconf.rviz  sim_landmark.launch  test_on_bag.launch  turtlebot.urdf
frontier_allocation/: CMakeLists.txt  README.md  package.xml
frontier_allocation/src/: common.h  frontier_allocation.cpp  frontier_detection.cpp  simple_ccl.h
gazebo_sim/: CMakeLists.txt  README.md  package.xml
gazebo_sim/launch/: rsload.sh  simulation_cartographer.launch  simulation_gmapping.launch  simulation_karto.launch
gazebo_sim/results/: binarize.py  edge-detect.py  image-reg.py  metric-correct.ods  metric.ods  metric.py  real_exp.ods  rst2csv.py
gazebo_sim_base/: CMakeLists.txt  package.xml
gazebo_sim_base/launch/: carto_on_bag.launch  mapping_on_bag.launch  simulation.launch  simulation_minimal.launch
inria_demo/: CMakeLists.txt  README.md  package.xml
inria_demo/doc/: install.md
inria_demo/launch/: auto_dock.launch  map.pgm  map.yaml  map.yaml.bak  map_dia.pgm  map_dia.yaml  map_old.pgm  map_old.yaml  mapping.launch  mapping_on_bag.launch  minimal_mapping.launch  nav_teb.launch  navigating.launch  navigating_sim.launch  navigation_w_teb.launch  office_map.pgm  office_map.yaml  web.launch
inria_demo/scripts/: #autodock_client.py#  annotation_deamon.py  autodock_client.py
inria_demo/web/: config.ini  get.sh
multi_master_bridge/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENCE  Makefile  README.md  cmake_install.cmake  package.xml
multi_master_bridge/catkin_generated/: generate_cached_setup.py  multi_master_bridge-msg-extras.cmake.develspace.in  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
multi_master_bridge/cmake/: multi_master_bridge-genmsg-context.py  multi_master_bridge-genmsg.cmake
multi_master_bridge/gtest/: CTestTestfile.cmake  Makefile
multi_master_bridge/msg/: MapData.msg  NeighbourId.msg  NeighbourList.msg
multi_master_bridge/src/: adhoc_setup.sh  init_map_feed.cpp  map_feeding.cpp  udp_broadcast.cpp  udp_dog.cpp
multi_master_bridge/srv/: PortalPort.srv
multi_merge/: CMakeLists.txt  README.md  package.xml
multi_merge/launch/: bag_view.rviz  cartographer_minimal.launch  exploration.rviz  gmapping_minimal.launch  move_base.launch  probabilistic_merging_on_bags.launch  single_exploration.launch  (+2 more)
multi_robot_sim/: CMakeLists.txt  package.xml
noisy_odometry/: CMakeLists.txt  package.xml
pharos_probabilistic_merging/: README.md  package.xml
pharos_probabilistic_merging/launch/: merging.launch
rplidar_demo/: CMakeLists.txt  package.xml
scan_odom_sync/: CMakeLists.txt  package.xml
sparse_bundle_adjustment/: CMakeLists.txt
tf_lookup/: CMakeLists.txt  package.xml
(+317 files in other folders)
